--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "author": "Tarun",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "data:import": "node seeder",
     "data:destroy": "node seeder -d"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^6.0.0"
